--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -24,3 +24,95 @@ Use it: php composer.phar
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php -r "unlink('composer-setup.php');"
 #+END_SRC
+** installed the dependencies
+#+BEGIN_SRC 
+Jingxuan-VirtualBox% php composer.phar install
+Loading composer repositories with package information
+Installing dependencies (including require-dev) from lock file
+Warning: The lock file is not up to date with the latest changes in composer.json. You may be getting outdated dependencies. Run update to update them.
+  - Installing symfony/finder (dev-master 1343b57)
+    Cloning 1343b576d1401f4a5117cab4e250201ae348143a
+
+  - Installing symfony/filesystem (dev-master 98e831e)
+    Cloning 98e831eac836a0a5911626ce82684155f21d0e4d
+
+  - Installing symfony/console (v2.3.4)
+    Loading from cache
+
+  - Installing sebastian/diff (dev-master ac84cfd)
+    Cloning ac84cfdec593945f36f24074d6ea17d296e86f76
+
+  - Installing fabpot/php-cs-fixer (v0.4.0)
+    Loading from cache
+
+  - Installing indeyets/pake (1.99.3)
+    Loading from cache
+
+  - Installing symfony/process (dev-master 8a3edac)
+    Cloning 8a3edace8e8aabed8992b993bfc13df3b1e836f2
+
+  - Installing kriswallsmith/assetic (v1.1.2)
+    Loading from cache
+
+  - Installing leafo/lessphp (v0.4.0)
+    Loading from cache
+
+  - Installing michelf/php-markdown (1.4.0)
+    Loading from cache
+
+  - Installing michelf/php-smartypants (1.6.0-beta1)
+    Loading from cache
+
+  - Installing mustache/mustache (v2.5.1)
+    Loading from cache
+
+  - Installing phpunit/php-token-stream (dev-master 955c24b)
+    Cloning 955c24b708f8bfd6a05f303217a8dac3a443d531
+
+  - Installing symfony/yaml (v2.3.4)
+    Loading from cache
+
+  - Installing phpunit/php-text-template (1.2.0)
+    Loading from cache
+
+  - Installing phpunit/phpunit-mock-objects (1.2.x-dev c39c451)
+    Cloning c39c4511c3b007539eb170c32cbc2af49a07351a
+
+  - Installing phpunit/php-timer (1.0.5)
+    Loading from cache
+
+  - Installing phpunit/php-file-iterator (1.3.4)
+    Loading from cache
+
+  - Installing phpunit/php-code-coverage (1.2.x-dev 6ef2bf3)
+    Cloning 6ef2bf3a1c47eca07ea95f0d8a902a6340390b34
+
+  - Installing phpunit/phpunit (3.7.x-dev ae6cefd)
+    Cloning ae6cefd7cc84586a5ef27e04bae11ee940ec63dc
+
+  - Installing squizlabs/php_codesniffer (1.5.3)
+    Loading from cache
+
+  - Installing sunra/php-simple-html-dom-parser (v1.5.0)
+    Loading from cache
+
+  - Installing symfony/config (v2.3.4)
+    Loading from cache
+
+  - Installing twig/twig (v1.13.2)
+    Loading from cache
+
+symfony/console suggests installing symfony/event-dispatcher ()
+indeyets/pake suggests installing phing/phing (2.4.*)
+indeyets/pake suggests installing simpletest/simpletest (1.1.*)
+kriswallsmith/assetic suggests installing leafo/scssphp (Assetic provides the integration with the scssphp SCSS compiler)
+kriswallsmith/assetic suggests installing leafo/scssphp-compass (Assetic provides the integration with the SCSS compass plugin)
+kriswallsmith/assetic suggests installing ptachoire/cssembed (Assetic provides the integration with phpcssembed to embed data uris)
+phpunit/php-code-coverage suggests installing ext-xdebug (>=2.0.5)
+phpunit/phpunit suggests installing phpunit/php-invoker (~1.1)
+Generating autoload files
+#+END_SRC
+** updated the libraries
+#+BEGIN_SRC 
+
+#+END_SRC
