--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -25,6 +25,7 @@ Use it: php composer.phar
 Jingxuan-VirtualBox% php -r "unlink('composer-setup.php');"
 #+END_SRC
 ** installed the dependencies
+
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php composer.phar install
 Loading composer repositories with package information
@@ -113,6 +114,78 @@ phpunit/phpunit suggests installing phpunit/php-invoker (~1.1)
 Generating autoload files
 #+END_SRC
 ** updated the libraries
-#+BEGIN_SRC 
 
+#+BEGIN_SRC 
+Jingxuan-VirtualBox% php composer.phar update
+Loading composer repositories with package information
+Updating dependencies (including require-dev)
+  - Removing squizlabs/php_codesniffer (1.5.3)
+  - Installing squizlabs/php_codesniffer (1.5.x-dev 6f3e42d)
+    Cloning 6f3e42d311b882b25b4d409d23a289f4d3b803d5
+
+  - Removing symfony/filesystem (dev-master)
+  - Installing symfony/filesystem (2.8.x-dev 44b4995)
+    Cloning 44b499521defddf2eae17a18c811bbdae4f98bdf
+
+  - Removing symfony/finder (dev-master)
+  - Installing symfony/finder (2.8.x-dev edb9822)
+    Cloning edb9822044c046705c1a103e3b275296ae30f252
+
+  - Removing symfony/process (dev-master)
+  - Installing symfony/process (2.8.x-dev 05a03ed)
+    Cloning 05a03ed27073638658cab9405d99a67dd1014987
+
+  - Removing phpunit/php-file-iterator (1.3.4)
+  - Installing phpunit/php-file-iterator (dev-master 6150bf2)
+    Cloning 6150bf2c35d3fc379e50c7602b75caceaa39dbf0
+
+  - Removing phpunit/php-text-template (1.2.0)
+  - Installing phpunit/php-text-template (1.2.1)
+    Loading from cache
+
+  - Removing phpunit/php-timer (1.0.5)
+  - Installing phpunit/php-timer (1.0.8)
+    Loading from cache
+
+  - Updating phpunit/php-token-stream dev-master (955c24b => cab6c6f)
+    Checking out cab6c6fefee93d7b7c3a01292a0fe0884ea66644
+
+  - Updating phpunit/php-code-coverage 1.2.x-dev (6ef2bf3 => fe24668)
+    Checking out fe2466802556d3fe4e4d1d58ffd3ccfd0a19be0b
+
+  - Updating phpunit/phpunit 3.7.x-dev (ae6cefd => 38709dc)
+    Checking out 38709dc22d519a3d1be46849868aa2ddf822bcf6
+
+Package fabpot/php-cs-fixer is abandoned, you should avoid using it. Use friendsofphp/php-cs-fixer instead.
+Writing lock file
+Generating autoload files
+#+END_SRC
+
+** Using ~md2resume_dev.php~
+
+#+BEGIN_SRC 
+Jingxuan-VirtualBox% php md2resume_dev.php
+Markdown Resume Generator version 2.0.10 by Craig Davis
+
+Usage:
+  [options] command [arguments]
+
+Options:
+  --help           -h Display this help message.
+  --quiet          -q Do not output any message.
+  --verbose        -v|vv|vvv Increase the verbosity of messages: 1 for normal output, 2 for more verbose output and 3 for debug
+  --version        -V Display this application version.
+  --ansi              Force ANSI output.
+  --no-ansi           Disable ANSI output.
+  --no-interaction -n Do not ask any interactive question.
+
+Available commands:
+  help         Displays help for a command
+  html         Generate an HTML resume from a markdown file
+  list         Lists commands
+  pdf          Generate a PDF from a markdown file
+  selfupdate   Updates md2resume.phar to the latest version.
+  stats        Generate a word frequency analysis of your resume
+  templates    List available templates
+  version      Show current version information
 #+END_SRC
