--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1,17 +1,18 @@
-* 16sep19 fresh start
+* 16sep19
+** fresh start
 Guide: https://github.com/adilapapaya/markdown-resume#feature-development
-** installed composer
+*** installed composer
 Guide: https://getcomposer.org/download/
-*** 1) Download the installer
+**** 1) Download the installer
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
 #+END_SRC
-*** 2) Verify the installer SHA-384
+**** 2) Verify the installer SHA-384
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php -r "if (hash_file('SHA384', 'composer-setup.php') === 'e115a8dc7871f15d853148a7fbac7da27d6c0030b848d9b3dc09e2a0388afed865e6a3d6b3c0fad45c48e2b5fc1196ae') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
 Installer verified
 #+END_SRC
-*** 3) Run the installer
+**** 3) Run the installer
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php composer-setup.php
 All settings correct for using Composer
@@ -20,11 +21,11 @@ Downloading 1.2.1...
 Composer successfully installed to: /home/jing/markdown-resume/composer.phar
 Use it: php composer.phar
 #+END_SRC
-*** 4) Remove the installer
+**** 4) Remove the installer
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php -r "unlink('composer-setup.php');"
 #+END_SRC
-** installed the dependencies
+*** installed the dependencies
 
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php composer.phar install
@@ -113,7 +114,7 @@ phpunit/php-code-coverage suggests installing ext-xdebug (>=2.0.5)
 phpunit/phpunit suggests installing phpunit/php-invoker (~1.1)
 Generating autoload files
 #+END_SRC
-** updated the libraries
+*** updated the libraries
 
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php composer.phar update
@@ -161,7 +162,7 @@ Writing lock file
 Generating autoload files
 #+END_SRC
 
-** Using ~md2resume_dev.php~
+*** Using ~md2resume_dev.php~
 
 #+BEGIN_SRC 
 Jingxuan-VirtualBox% php md2resume_dev.php
@@ -189,3 +190,11 @@ Available commands:
   templates    List available templates
   version      Show current version information
 #+END_SRC
+** mkdir ./examples/output
+** mkdir ./gif
+** generated html resume from sample_long.md
+#+BEGIN_SRC 
+Jingxuan-VirtualBox% php md2resume_dev.php html --template modern examples/source/sample_long.md examples/output/
+Wrote resume to: examples/output/sample_long.html
+#+END_SRC
+[[file:gif/20160919-sample_long-html-a.png][20160919-sample_long-html-a]]
