changed dt font-size to 140%, and removed text-indentation

--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -421,3 +421,4 @@ Jingxuan-VirtualBox% grep -rni "28px" .
 ** removed all the auto-saved files and tried again
 *** it worked!
 [[file:gif/20160924-cv-d.png][20160924-cv-d]]
+** [master c62c2e4] removed red h2 -- back to original
