reverted templates/modern/css/resume.css to the latest version from jalperin -- decided to start with there4's template instead so 'restting' jalperin's files to their mint condition

--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -436,3 +436,4 @@ A    modern/description.txt
 A    modern/index.html
 Checked out revision 125.
 #+END_SRC
+** [master 7a98c2e] commit before renaming modern template to jalperin
