--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -466,3 +466,16 @@ probably only templates/modern/css/resume.css
 - start cloning
 *** problems
 - still going to be a problem matching the directory because if cloning into the current working directory, then it would be something like that markdown-resume/markdown-resume/templates/modern
+** [master 21ca01c] added the whole markdown-resume from there4 as a git submodule
+ 3 files changed, 21 insertions(+)
+ create mode 100644 .gitmodules
+ create mode 160000 markdown-resume
+#+BEGIN_SRC 
+Jingxuan-VirtualBox% git submodule add https://github.com/there4/markdown-resume.git
+Cloning into 'markdown-resume'...
+remote: Counting objects: 863, done.
+Receiving objects: 100% (863/863), 7.04 MiB | 884.00 KiB/s, done.
+remote: Total 863 (delta 0), reused 0 (delta 0), pack-reused 863
+Resolving deltas: 100% (335/335), done.
+Checking connectivity... done.
+#+END_SRC
