--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -527,3 +527,4 @@ Receiving objects: 100% (863/863), 7.04 MiB | 1.47 MiB/s, done.
 Resolving deltas: 100% (335/335), done.
 Checking connectivity... done.
 #+END_SRC
+** [master 07312ee] missed a few steps so going to start over again
