--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -944,3 +944,7 @@ Unable to checkout '26638a4ebb6f5460ffa95022eafb7004c0f152d0' in submodule path 
 ** [master b63aa18] deleted modern submodule -- ready to restart
  3 files changed, 35 insertions(+), 4 deletions(-)
  delete mode 160000 templates/modern
+** [master 40822d0] added markdown-resume repo into templates as submodule
+ 3 files changed, 7 insertions(+), 1 deletion(-)
+ create mode 160000 templates/modern
+** [master 44cf2dc] remove everything except the templates folder
